Remove wiremock-jre8-standalone dependency and upgrade to wiremock dependency to wiremock-standalone:3.0.1 With the new dependency the apache commons library is not available anymore. Fix the tests that use apache commons IOUtils [HZ-3113]