@@ -20,7 +20,6 @@ import com.hazelcast.test.HazelcastSerialClassRunner;
 import com.hazelcast.test.JarUtil;
 import com.hazelcast.test.annotation.ParallelJVMTest;
 import com.hazelcast.test.annotation.QuickTest;
-import org.apache.commons.io.IOUtils;
 import org.junit.After;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -248,7 +247,7 @@ public class ChildFirstClassLoaderTest {
                 throw new IllegalArgumentException("Resource with name " + name +
                         " could not be found in classloader " + cl);
             }
-            return IOUtils.toString(is, UTF_8);
+            return new String(is.readAllBytes(), UTF_8);
         }
     }
 }
